--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,9 +31,9 @@ Imports:
     magrittr,
     readr,
     fs,
-    here,
-    ecoextract
+    here
 Suggests:
+    ecoextract
     tokenizers,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
