--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Imports:
     fs,
     here
 Suggests:
-    ecoextract
+    ecoextract,
     tokenizers,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
